Enhance security and validation: update error handling in application properties, refine authorization, add validation for user registration and login, and implement unauthorized access tests for product, category and user operations.